--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose-slug-generator": "^1.0.4",
     "mysql": "^2.18.1",
     "node-localstorage": "^2.2.1",
+    "socket.io": "^4.3.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
